--- a/index.html
+++ b/index.html
@@ -82,9 +82,17 @@
       padding: 12px 20px;
     }
 
+    @media only screen and (max-width: 480px) {
+      body > .content {
+        width: 100%;
+      }
+    }
+
   </style>
 
-  <body ng-app>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <body>
 
   <div class='content'>
     <h1>ANEESH</h1>
